--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
     - run:
         name: Publish Docker image with Jib
         command: |
-          ./mvnw compile jib:build -B -DskipTests=true \
+          mvn compile jib:build -B -DskipTests=true \
             -Dbuild.number=${CIRCLE_BUILD_NUM} \
             -Dcommit.hash=${CIRCLE_SHA1} \
             -Dcircle.workflow.guid=${CIRCLE_WORKFLOW_ID} \
